--- a/css/styles.css
+++ b/css/styles.css
@@ -632,7 +632,6 @@ pointer-events: none;
 
   min-width: 528px;
   min-height: 581px;
-  padding: 14px;
 
   background: var(--primary-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -641,10 +640,23 @@ pointer-events: none;
 }
 
 .modal-close-button {
-  display: block;
+  display: flex;
+  /* margin-left: auto;
+  margin-right: 8px;
+  margin-top: 8px; */
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  justify-content: center;
+  align-items: center;
   padding: 0;
-  border: none;
   cursor: pointer;
+  width: 30px;
+  height: 30px;
+  
+  background: var(--primary-bg-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
 
   
 
