--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,10 @@ img {
   font-weight: 500;
   letter-spacing: 0.02em;
   line-height: 1.14;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Page header */
 
@@ -153,6 +157,10 @@ img {
   line-height: 1.14;
   align-items: center;
   color: var(--secondary-text-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-container {
   display: flex;
@@ -369,6 +377,10 @@ img {
   width: 44px;
   height: 44px;
   color: var(--clients-color);
+
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-social-icon {
@@ -437,6 +449,10 @@ img {
   font-style: normal;
   line-height: 1.71;
   letter-spacing: 0.03em;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address-list .link {
@@ -485,6 +501,10 @@ img {
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--white-title-color);
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-social-link:hover,
@@ -520,6 +540,10 @@ img {
   line-height: 1.62;
   letter-spacing: 0.03em;
   cursor: pointer;
+
+  transition-property: background-color, color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-button:hover,
@@ -550,6 +574,10 @@ img {
 
 .portfolio-link {
   display: inline-block;
+
+  /* transition-property: background-color;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .portfolio-link:hover,
