--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
   --portfolio-border-color: #eeeeee;
   --logo-black-color: #000000;
   --clients-color: #afb1b8;
-  --transition-duration: 250ms;
+  --transition-duration: 5000ms;
   --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -95,7 +95,7 @@ img {
   line-height: 1.14;
 
   transition: color var(--transition-duration) var(--transition-timing-function);
- }
+}
 /* Page header */
 
 .header {
@@ -376,7 +376,9 @@ img {
   height: 44px;
   color: var(--clients-color);
 
-  transition: color var(--transition-duration) var(--transition-timing-function), background-color var(--transition-duration) var(--transition-timing-function);
+  transition: color var(--transition-duration) var(--transition-timing-function),
+    background-color var(--transition-duration)
+      var(--transition-timing-function);
 }
 
 .team-social-icon {
@@ -411,6 +413,8 @@ img {
   border: 1px solid var(--clients-color);
   border-radius: 4px;
   cursor: pointer;
+  transition: color var(--transition-duration) var(--transition-timing-function),
+      border var(--transition-duration) var(--transition-timing-function);
 }
 
 .client-icon {
@@ -453,6 +457,7 @@ img {
   margin-top: 9px;
   color: rgba(255, 255, 255, 0.6);
 }
+
 .address-list .map {
   color: var(--white-title-color);
 }
@@ -496,7 +501,8 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--white-title-color);
 
-  transition: background-color var(--transition-duration) var(--transition-timing-function);
+  transition: background-color var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .footer-social-link:hover,
@@ -533,14 +539,16 @@ img {
   letter-spacing: 0.03em;
   cursor: pointer;
 
-  transition: background-color var(--transition-duration) var(--transition-timing-function), color var(--transition-duration) var(--transition-timing-function);
+  transition: background-color var(--transition-duration)
+      var(--transition-timing-function),
+    color var(--transition-duration) var(--transition-timing-function),
+    box-shadow var(--transition-duration) var(--transition-timing-function);
 }
 
 .filter-button:hover,
 .filter-button:focus {
   background-color: var(--accent-color);
   color: var(--white-title-color);
-
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
@@ -564,7 +572,9 @@ img {
 
 .portfolio-link {
   display: inline-block;
- }
+
+  transition: box-shadow var(--transition-duration) var(--transition-timing-function);
+}
 
 .portfolio-link:hover,
 .portfolio-link:focus {
@@ -600,7 +610,8 @@ img {
   background-color: rgba(33, 150, 243, 0.9);
 
   transform: translateY(0);
-  transition: transform var(--transition-duration) var(--transition-timing-function);
+  transition: transform var(--transition-duration)
+    var(--transition-timing-function);
 }
 
 .portfolio-thumb-text {
@@ -614,7 +625,7 @@ img {
 }
 
 .portfolio-link:hover .portfolio-overlay,
- .portfolio-link:focus .portfolio-overlay {
+.portfolio-link:focus .portfolio-overlay {
   transform: translateY(-100%);
 }
 
@@ -629,19 +640,27 @@ img {
 
   background-color: rgba(0, 0, 0, 0.2);
   border: 1px solid #000000;
+
+  opacity: 1;
+  transition: opacity var(--transition-duration) var(--transition-timing-function);
 }
 
 .backdrop.is-hidden {
-visibility: hidden;
-opacity: 0;
-pointer-events: none;
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
+
+.backdrop.is-hidden .modal {
+transform: translate(-50%, -50%) scale(0.2);
+transition: transform var(--transition-duration) var(--transition-timing-function); }
 
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform var(--transition-duration) var(--transition-timing-function);
 
   min-width: 528px;
   min-height: 581px;
@@ -654,9 +673,6 @@ pointer-events: none;
 
 .modal-close-button {
   display: flex;
-  /* margin-left: auto;
-  margin-right: 8px;
-  margin-top: 8px; */
   position: absolute;
   top: 8px;
   right: 8px;
@@ -666,11 +682,8 @@ pointer-events: none;
   cursor: pointer;
   width: 30px;
   height: 30px;
-  
+
   background: var(--primary-bg-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-
-  
-
 }
