--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
   --portfolio-border-color: #eeeeee;
   --logo-black-color: #000000;
   --clients-color: #afb1b8;
-  --transition-duration: 250ms;
+  --transition-duration: 2500ms;
   --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -82,13 +82,9 @@ img {
 .nav-list {
   display: flex;
 }
-.nav-item:not(:last-child) {
-  margin-right: 50px;
-}
 
 .nav-list .link {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 25px;
   display: block;
   font-weight: 500;
   letter-spacing: 0.02em;
@@ -650,10 +646,14 @@ img {
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
+  transition: visibility var(--transition-duration)
+  var(--transition-timing-function);
 }
 
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.2);
+  
 }
 
 .modal {
@@ -663,6 +663,7 @@ img {
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--transition-duration)
     var(--transition-timing-function);
+   
 
   min-width: 528px;
   min-height: 581px;
