--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
   --portfolio-border-color: #eeeeee;
   --logo-black-color: #000000;
   --clients-color: #afb1b8;
-  --transition-duration: 2500ms;
+  --transition-duration: 250ms;
   --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -640,16 +640,16 @@ img {
 
   opacity: 1;
   transition: opacity var(--transition-duration)
-    var(--transition-timing-function);
+    var(--transition-timing-function), 
+    visibility var(--transition-duration)
+    var(--transition-timing-function);;
 }
 
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
-  transition: visibility var(--transition-duration)
-  var(--transition-timing-function);
-}
+  }
 
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.2);
